# discord-shards

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: lib.rs
src/shards_impl/: bot.rs
