[package]
name = "discord-shards"
version = "0.1.0"
edition = "2021"

[lib]
name = "discord"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shards = { git = "https://github.com/fragcolor-xyz/shards.git", features = ["run_bindgen", "dllblock"] }
